--- a/maps_sequence.Rmd
+++ b/maps_sequence.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "sequencing_efforts"
-author: "Andrew"
+title: "Map of Sequenced COVID-19 Cases by State"
+author: "Andrew Holtz"
 date: "7/29/2020"
 output: html_document
 ---
@@ -22,7 +22,7 @@ library(dplyr)
 ```
 
 #
-```{r cars}
+```{r , echo = FALSE, warning = FALSE, message= FALSE}
 
 NCBI <- read.csv("~/covidmaps/NCBI.csv")
 
@@ -45,7 +45,7 @@ states <- rgdal::readOGR("C:/Users/Andrew/Downloads/cb_2018_us_state_5m/cb_2018_
 
 states <- merge(states, cases, by = 'NAME')
 
-bins <- c(0, 10, 20, 50, 100, 200, 500, 1000, Inf)
+bins <- c(NA, 0, 10, 20, 50, 100, 200, 500, 1000, Inf)
 
 labels <- sprintf(
   "<strong>%s</strong><br/>%g seq. cases </sup>",
@@ -68,6 +68,7 @@ leaflet(states) %>%
   setView(lng = -95, lat = 40, zoom = 3.5) %>% 
   addLegend(pal = colorBin("YlOrRd", domain = n, bins = bins), values = ~density, opacity = 0.7, title = NULL,
   position = "bottomright")
+
 
  
 
